--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -16,6 +16,16 @@
       <servlet-name>IndexServlet</servlet-name>
       <url-pattern>/User/Index</url-pattern>
     </servlet-mapping>
+    
+  <!-- 历史  -->
+    <servlet>
+      <servlet-name>HistoricServlet</servlet-name>
+      <servlet-class>com.neuedu.lvcity.servlet.HistoricServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+      <servlet-name>HistoricServlet</servlet-name>
+      <url-pattern>/User/Historic</url-pattern>
+    </servlet-mapping>
   
   
   <servlet>
