--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -16,7 +16,16 @@
       <servlet-name>IndexServlet</servlet-name>
       <url-pattern>/User/Index</url-pattern>
     </servlet-mapping>
-  
+  <!-- 风景 -->
+
+    <servlet>
+      <servlet-name>ScenicServlet</servlet-name>
+      <servlet-class>com.neuedu.lvcity.servlet.ScenicServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+      <servlet-name>ScenicServlet</servlet-name>
+      <url-pattern>/User/beautiful</url-pattern>
+    </servlet-mapping>
   
   <servlet>
     <servlet-name>default</servlet-name>
