--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -15,24 +15,39 @@
     <servlet-mapping>
       <servlet-name>IndexServlet</servlet-name>
       <url-pattern>/User/Index</url-pattern>
-    </servlet-mapping>
-  
-  
-  <servlet>
+    </servlet-mapping> 
+  	<servlet>
     <servlet-name>default</servlet-name>
     <servlet-class>
           org.apache.catalina.servlets.DefaultServlet
-        </servlet-class>
+    </servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>default</servlet-name>
     <url-pattern>*.js</url-pattern>
+     <url-pattern>*.do</url-pattern>
     <url-pattern>*.css</url-pattern>
     <url-pattern>*.jpg</url-pattern>
     <url-pattern>*.png</url-pattern>
     <url-pattern>*.html</url-pattern>
   </servlet-mapping>
- 
- 
+    <!-- 动态   黄润志 2018-7-22 -->
+    <servlet>
+      <servlet-name>NoticeServlet</servlet-name>
+      <servlet-class>com.neuedu.lvcity.servlet.NoticeServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+      <servlet-name>NoticeServlet</servlet-name>
+      <url-pattern>/User/noticetype</url-pattern>
+    </servlet-mapping>
+        <!-- 留言   黄润志 2018-7-22 -->
+    <servlet>
+      <servlet-name>LeaveServlet</servlet-name>
+      <servlet-class>com.neuedu.lvcity.servlet.LeaveServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+      <servlet-name>LeaveServlet</servlet-name>
+      <url-pattern>/leave/huang.do</url-pattern>
+    </servlet-mapping>
 
 </web-app>
